# apertium-swe-nor

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  Makefile.am  apertium-swe-nor.nno-swe.lrx  apertium-swe-nor.nob-swe.lrx  apertium-swe-nor.nor-swe.lrx  apertium-swe-nor.nor-swe.lsx  apertium-swe-nor.nor-swe.rtx  apertium-swe-nor.nor-swe.t1x  apertium-swe-nor.nor-swe.t2x  apertium-swe-nor.nor-swe.t3x  apertium-swe-nor.nor.lexc  apertium-swe-nor.nor.twol  apertium-swe-nor.swe-nno.lrx  apertium-swe-nor.swe-nno.lsx  apertium-swe-nor.swe-nno.rtx  apertium-swe-nor.swe-nno.t1x  apertium-swe-nor.swe-nno.t2x  apertium-swe-nor.swe-nno.t3x  apertium-swe-nor.swe-nob.lrx  apertium-swe-nor.swe-nob.lsx  apertium-swe-nor.swe-nob.rtx  apertium-swe-nor.swe-nob.t1x  apertium-swe-nor.swe-nor.dix  apertium-swe-nor.swe-nor.lrx  apertium-swe-nor.swe-nor.rlx  apertium-swe-nor.swe-nor.t1x  apertium-swe-nor.swe.lexc  apertium-swe-nor.swe.twol  configure.ac  modes.xml
dev/: add-words  add-words.awk  adj-sint-consistency.sh  lex-learn-unigram.sh  swe-noun-consistency.awk  wikipedia.nouns.txt  wikt.nouns.swe-nor.txt  wikt.verbs.swe-nor.txt
dev/cross/: Makefile  exp-to-dix.awk
dev/testvoc/: generation.sh
t/: hash-count  progression
test/: nno-swe-pending-biltrans-expected.txt  nno-swe-pending-chunker-expected.txt  nno-swe-pending-input.txt  nno-swe-regression-morph-expected.txt  nno-swe-regression-tagger-expected.txt  nob-swe-pending-autoseq-expected.txt  nob-swe-pending-biltrans-expected.txt  nob-swe-pending-disam-expected.txt  nob-swe-pending-generator-expected.txt  nob-swe-pending-generator-gold.txt  nob-swe-pending-input.txt  nob-swe-pending-interchunk-expected.txt  nob-swe-pending-lex-expected.txt  nob-swe-pending-postchunk-expected.txt  nob-swe-regression-autoseq-expected.txt  nob-swe-regression-biltrans-expected.txt  nob-swe-regression-disam-expected.txt  nob-swe-regression-generator-expected.txt  nob-swe-regression-generator-gold.txt  nob-swe-regression-input.txt  nob-swe-regression-interchunk-expected.txt  nob-swe-regression-lex-expected.txt  nob-swe-regression-morph-expected.txt  nob-swe-regression-seg-expected.txt  nob-swe-regression-tagger-expected.txt  swe-nno-disam-expected.txt  swe-nno-generator-expected.txt  swe-nno-input.txt  swe-nno-interchunk-expected.txt  swe-nno-lex-expected.txt  swe-nno-morph-expected.txt  swe-nno-pending-input.txt  swe-nno-pending-postchunk-expected.txt  swe-nno-pending-postgen-expected.txt  swe-nno-postchunk-expected.txt  swe-nno-postgen-gold.txt  swe-nno-pretransfer-expected.txt  swe-nno-regression-biltrans-expected.txt  swe-nno-regression-chunker-expected.txt  swe-nno-regression-disam-expected.txt  (+33 more)
test/expected/: nno-swe-regression-generator.txt  nno-swe-regression-lex.txt  nno-swe-regression-postchunk.txt  nob-swe-regression-autoseq.txt  nob-swe-regression-biltrans.txt  nob-swe-regression-disam.txt  nob-swe-regression-generator.txt  nob-swe-regression-lex.txt  nob-swe-regression-morph.txt  nob-swe-regression-postchunk.txt  nob-swe-regression-seg.txt  nob-swe-regression-tagger.txt  nob-swe-regression-transfer.txt  swe-nno-regression-biltrans.txt  swe-nno-regression-chunker.txt  swe-nno-regression-disam.txt  swe-nno-regression-generator.txt  swe-nno-regression-interchunk.txt  swe-nno-regression-lex.txt  swe-nno-regression-morph.txt  swe-nno-regression-postchunk.txt  swe-nno-regression-postgen.txt  swe-nno-regression-pretransfer.txt  swe-nno-regression-tagger.txt  swe-nob-regression-biltrans.txt  swe-nob-regression-chunker.txt  swe-nob-regression-disam.txt  swe-nob-regression-generator.txt  swe-nob-regression-interchunk.txt  swe-nob-regression-lex.txt  swe-nob-regression-morph.txt  swe-nob-regression-postchunk.txt  swe-nob-regression-pretransfer.txt  swe-nob-regression-tagger.txt
test/gold/: nno-swe-regression-generator.txt  nob-swe-regression-generator.txt  swe-nno-regression-postgen.txt  swe-nob-regression-generator.txt
tests/: 001-såleverjag.all.gold.txt  001-såleverjag.input.txt  ymse.all.gold.txt  ymse.input.txt
texts/: story.nno.txt  trädbank.swe.txt
